[package]
name = "pokemon_ai_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.26"
ratatui = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
image = "0.24"
